Fix bug 122682 "browser hangs temporarily if switched offline while DNS thread in in GetHostByName". r=gagan, sr=darin.